[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = ["development-tools::debugging"]
description = "Opinionated bunyan-like logger for small tools/apps"
license = "MIT OR Apache-2.0"
name = "bunyarrs"
readme = "README.md"
repository = "https://github.com/FauxFaux/bunyarrs"
version = "0.2.0"

edition = "2021"

[dependencies]
gethostname = "0.4"
lazy_static = "1"
serde_json = { version = "1", features = ["preserve_order"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
